Update tutorial info

--- a/registration.html
+++ b/registration.html
@@ -6,16 +6,16 @@ registrations:
   early:
     - type: Conference Only
       price: [700, 875, 300]
-    - type: Conference + Workshop
+    - type: Conference + Workshop (incl. tutorial)
       price: [850, 1125, 350]
-    - type: Workshop Only
+    - type: Workshop Only (incl. tutorial)
       price: [300, 400, 150]
   late:
     - type: Conference Only
       price: [800, 975, 400]
-    - type: Conference + Workshop
+    - type: Conference + Workshop (incl. tutorial)
       price: [950, 1225, 450]
-    - type: Workshop Only
+    - type: Workshop Only (incl. tutorial)
       price: [350, 450, 200]
 
 ---
