--- a/registration.html
+++ b/registration.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: "<b>>> Register Now <<</b>"
+title: "<del>Register Now</del>"
+group: Conference
 
 registrations:
   early:
